# openscenario-rs

./: .gitignore  .rustfmt.toml  AGENTS.md  BUILDER_ACHIEVEMENTS.md  BUILDER_STATUS.md  CHANGELOG.md  Cargo.toml  DATATYPE_COVERAGE_WITH_XSD.md  Directory_catalog.md  IMPLEMENTATION_SUMMARY.md  MVP_ROADMAP.md  OpenSCENARIO_Datatypes_Reference.md  PARSING_COMPARISON.md  PHASE_4_PLAN.md  README.md  SUCCESS_REPORT.md  TODO_SUMMARY.md  WEEK5_COMPLETION.md  WEEK5_IMPLEMENTATION_SUMMARY.md  actions.md  check_builder_compilation.sh  check_errors.sh  check_road.sh  datatypes.md  debug_parse.rs  groups_plan.md  log.txt  log_1_of_12.txt  plan.md  quick_test.sh  run_builder_test.sh  run_check.sh  run_entity_test.sh  run_one_test.sh  run_simple_test.sh  run_test.sh  run_test_simple.sh  temp_parsing.rs  test_builder.sh  test_builder_compile.sh  (+12 more)
Schema/: NOTICE  OpenSCENARIO.xsd
benches/: builder_performance.rs
builderplan/: README.md  phase0-foundation.md  phase1-core-infrastructure.md  phase2-document-types.md  phase3-advanced-features.md  phase4-polish-optimization.md
docs/: README.md  action_wrapper_implementation.md  api_reference.md  builder_guide.md  byvalue_conditions_guide.md  design.md  development_guide.md  distribution_fixes.md  distribution_fixes_quickxml.md  examples.md  extension_guide.md  integration_guide.md  migration_guide.md  performance_guide.md  type_system_guide.md  user_guide.md  validation_guide.md  xsd_choice_group_implementation_plan.md  xsd_validation_fixes.md
examples/: action_wrappers_demo.rs  alks_scenario_4_1_1_comprehensive.rs  alks_scenario_builder_demo.rs  basic_parsing.rs  basic_parsing.rs.bak  bounding_box_demo.rs  builder_basic_demo.rs  builder_basic_usage.rs  builder_complete_usage.rs  builder_comprehensive_demo.rs  builder_performance_demo.rs  builder_phase2_usage.rs  builder_phase3_usage.rs  byvalue_conditions_demo.rs  catalog_handling.rs  cut_in_scenario_demo.rs  debug_catalog_resolution.rs  debug_complex_parsing.rs  debug_parsing.rs  debug_xml_error.rs  expression_demo.rs  investigate_xml_structure.rs  motion_conditions_demo.rs  parse.rs  pedestrian_builder_demo.rs  phase1_executable_demo.rs  routing_demo.rs  scenario_builder.rs  simple_parse.rs  simple_spatial_demo.rs  spatial_conditions_demo.rs  test_alks_parse.rs  test_delay_fix.rs  test_detached_builders.rs  test_deterministic_only.rs  test_deterministic_xml.rs  test_entity_condition.rs  test_full_openscenario.rs  test_full_param_dist.rs  test_lane_change_serialization.rs  (+14 more)
src/: error.rs  expression.rs  lib.rs
tests/: README.md  action_builders_test.rs  action_wrapper_types_test.rs  actions_serialization_test.rs  advanced_positions_test.rs  axles_basic_test.rs  basic_entity_condition_test.rs  builder_basic_test.rs  builder_complete_scenario_test.rs  builder_conditions_test.rs  builder_parameters_test.rs  builder_phase2_test.rs  builder_triggered_scenario_test.rs  builder_vehicle_test.rs  byvalue_conditions_simple_test.rs  byvalue_conditions_test.rs  byvalue_integration_test.rs  catalog_builders_test.rs  catalog_integration_tests.rs  choice_group_infrastructure_test.rs  complete_scenario_builder_test.rs  comprehensive_parsing_test.rs  condition_builders_test.rs  detached_builder_test.rs  detached_builders_test.rs  deterministic_deserializer_test.rs  deterministic_distributions_test.rs  integration_tests.rs  (+41 more)
(+146 files in other folders)
