[package]
name = "openscenario-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ashfaq Farooqui"]
description = "Rust library for parsing and manipulating OpenSCENARIO files"
license = "GPLv3"
repository = "https://github.com/ashfaqfarooqui/openscenario-rs"
keywords = ["openscenario", "xml", "automotive", "simulation", "asam"]
categories = [""]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.32", features = ["serialize"] }
serde_json = "1.0"
thiserror = "1.0"
libxml = "0.3"
clap = { version = "4.0", features = ["derive"] }

indexmap = { version = "2.0" }
chrono = { version = "0.4", features = ["serde"] }
regex = { version = "1.0" }
markup_fmt = "0.23.4"


[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
tempfile = "3.0"
serde_json = "1.0.143"

[features]
default = ["builder"]
builder = []
validation = []
streaming = []

[[bin]]
name = "xosc-validate"
path = "tools/xosc_validate.rs"
