[package]
name = "openscenario-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.90"
authors = ["Ashfaq Farooqui"]
description = "Rust library for parsing and manipulating OpenSCENARIO files"
license = "GPLv3"
repository = "https://github.com/ashfaqfarooqui/openscenario-rs"
keywords = ["openscenario", "xml", "automotive", "simulation", "asam"]
categories = ["parsing", "simulation", "science::robotics"]
readme = "README.md"
documentation = "https://docs.rs/openscenario-rs"
homepage = "https://github.com/ashfaqfarooqui/openscenario-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde_json = "1.0"
thiserror = "2.0"
libxml = "0.3"
clap = { version = "4.0", features = ["derive"] }

indexmap = { version = "2.0" }
chrono = { version = "0.4", features = ["serde"] }
regex = { version = "1.0" }
markup_fmt = "0.24"


[features]
builder = []


[dev-dependencies]
proptest = "1.0"
criterion = "0.7"
tempfile = "3.0"

[[bin]]
name = "xosc-validate"
path = "tools/xosc_validate.rs"

[[bin]]
name = "scenario_analyzer"
path = "tools/scenario_analyzer.rs"

[[example]]
name = "pedestrian_builder_demo"
required-features = ["builder"]
